--- a/Author/Info.plist
+++ b/Author/Info.plist
@@ -32,8 +32,8 @@
 	<string>NSApplication</string>
 	<key>SMPrivilegedExecutables</key>
 	<dict>
-		<key>AuthorHelper</key>
-		<string>identifier AuthorHelper and anchor apple generic and certificate leaf[subject.CN] = &quot;Mac Developer: Tomoyuki Sahara (96J5HTC9TP)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<key>net.caddr.Author.Helper</key>
+		<string>identifier &quot;net.caddr.Author.Helper&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;Mac Developer: Tomoyuki Sahara (96J5HTC9TP)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 	</dict>
 </dict>
 </plist>
