--- a/AuthorHelper/Info.plist
+++ b/AuthorHelper/Info.plist
@@ -4,8 +4,12 @@
 <dict>
 	<key>CFBundleIdentifier</key>
 	<string>net.caddr.Author.Helper</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>AuthorHelper</string>
+	<key>CFBundleVersion</key>
+	<string>1.5</string>
 	<key>SMAuthorizedClients</key>
 	<array>
 		<string>identifier &quot;net.caddr.Author&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;Mac Developer: Tomoyuki Sahara (96J5HTC9TP)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
